# silky

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  silkyex1.c
src/: silky.c  silky.h
